<resources>
    <string name="app_name">SoleSmart</string>
    <string name="solesmart">SoleSmart</string>
    <string name="power">Power  </string>
    <string name="temperature">Temperature</string>
    <string name="calendrier">Calendrier</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="step">Step</string>
    <string name="batterie">Batterie</string>
    <string name="parametres">Paramètres</string>
    <string name="language">Language</string>
    <string name="francais">Français</string>
    <string name="english">English</string>
    <string name="battery">Battery</string>
    <string name="bluetooth">Bluetooth</string>
</resources>
