<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.developpement.guide.solesmart.Home">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solesmart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="34sp"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Switch
        android:id="@+id/power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:text="@string/power"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/titleTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/power"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/temperature"
        android:fontFamily="casual"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        />

    <ImageView
        android:id="@+id/Imageleft"
        android:layout_width="50dp"
        android:layout_height="200dp"
        android:src="@drawable/piedgauche"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/titleTemperature"
        app:layout_constraintRight_toRightOf="@id/mySeekBarLeft"
        app:layout_constraintStart_toStartOf="@id/titleTemperature"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/mySeekBarLeft"
        app:layout_constraintTop_toBottomOf="@id/titleTemperature"
        android:text="30°C"
        app:layout_constraintStart_toStartOf="@id/mySeekBarLeft" />

    <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
        android:id="@+id/mySeekBarLeft"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@id/titleTemperature"
        app:layout_constraintLeft_toRightOf="@id/Imageleft"
        app:layout_constraintTop_toTopOf="@id/Imageleft"
        app:layout_constraintRight_toLeftOf="@id/mySeekBarRight"
        app:layout_constraintBottom_toBottomOf="@id/Imageleft"
        android:layout_marginRight="30dp">

        <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar

            android:layout_width="0dp"
            android:layout_height="0dp"
            android:splitTrack="false"
            app:seekBarRotation="CW90"
            /> <!-- Rotation: CW90 or CW270 -->
    </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>

    <ImageView
        android:id="@+id/ImageRight"
        android:layout_width="50dp"
        android:layout_height="200dp"
        android:src="@drawable/pieddroite"
        app:layout_constraintTop_toBottomOf="@id/titleTemperature"
        app:layout_constraintLeft_toLeftOf="@id/mySeekBarRight"
        app:layout_constraintEnd_toEndOf="@id/titleTemperature"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleTemperature"
        app:layout_constraintBottom_toTopOf="@id/mySeekBarRight"
        android:text="30°C"
        app:layout_constraintStart_toStartOf="@id/mySeekBarRight"
        />

    <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
        android:id="@+id/mySeekBarRight"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@id/titleTemperature"
        app:layout_constraintRight_toLeftOf="@id/ImageRight"
        app:layout_constraintLeft_toRightOf="@id/mySeekBarLeft"
        app:layout_constraintTop_toTopOf="@id/ImageRight"
        app:layout_constraintBottom_toBottomOf="@id/ImageRight">
        <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:splitTrack="false"
            app:seekBarRotation="CW90" /> <!-- Rotation: CW90 or CW270 -->
    </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>


</android.support.constraint.ConstraintLayout>
